<resources>
    <string name="app_name">Submission2</string>

    <string name="tab1">Followers</string>
    <string name="tab2">Following</string>
    <string name="Username">Username</string>
    <string name="Name">Name</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="Nofollowing">This User Not Have Following</string>
    <string name="Nofollowers">This User Not Have Followers</string>
    <string name="NotFound">User Not Found</string>
    <string name="Progress">Sedang Memuat Data</string>
    <string name="company">Nusantara Beta Studio</string>
    <string name="Location">Jakarta Indonesia</string>
    <string name="description">Description :</string>
    <string name="repo">Repository</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="schedule_notification">Set Schedule</string>
    <string name="Schedule">Schedule</string>
    <string name="fav">favorite</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>