<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main.detail.DetailAccountActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:fitsSystemWindows="true">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/coordinator3">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/tvProfile"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvUsername"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvProfile"
                    tools:text="@string/Name" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/description"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_marginStart="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvName" />

                <TextView
                    android:id="@+id/Location"
                    android:layout_width="300dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="35dp"
                    android:textSize="15sp"
                    android:textStyle="italic"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/description"
                    tools:text="@string/Location" />

                <TextView
                    android:id="@+id/Company"
                    android:layout_width="300dp"
                    android:layout_height="25dp"
                    android:textSize="15sp"
                    android:textStyle="italic"
                    app:layout_constraintStart_toEndOf="@+id/imageCompany"
                    app:layout_constraintTop_toBottomOf="@+id/Location"
                    tools:text="@string/company" />

                <TextView
                    android:id="@+id/tvUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:textSize="30sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints"
                    tools:text="@string/Username" />

                <TextView
                    android:id="@+id/tvFollowers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="115dp"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/cvrFollowers"
                    app:layout_constraintEnd_toStartOf="@+id/toggle_favorite"
                    tools:text="0" />

                <TextView
                    android:id="@+id/cvrFollowers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="70dp"
                    android:text="@string/followers"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/tvName"
                    app:layout_constraintStart_toEndOf="@+id/cvrFollowing" />


                <TextView
                    android:id="@+id/tvFollowing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="56dp"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/cvrFollowing"
                    app:layout_constraintStart_toEndOf="@+id/tvProfile"
                    tools:text="0" />

                <TextView
                    android:id="@+id/tvRepo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="35dp"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/cvrRepo"
                    app:layout_constraintEnd_toStartOf="@+id/toggle_favorite"
                    tools:text="0" />

                <TextView
                    android:id="@+id/cvrRepo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="70dp"
                    android:text="@string/repo"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/tvName"
                    app:layout_constraintStart_toEndOf="@+id/cvrFollowers" />

                <TextView
                    android:id="@+id/cvrFollowing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="70dp"
                    android:text="@string/following"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/tvName"
                    app:layout_constraintStart_toEndOf="@+id/tvProfile" />


                <ToggleButton
                    android:id="@+id/toggle_favorite"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:layout_marginTop="55dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/fav_toggle"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:textOff=""
                    android:textOn=""
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/imageLocation"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="5dp"
                    app:layout_constraintEnd_toStartOf="@+id/Location"
                    app:layout_constraintTop_toBottomOf="@+id/description"
                    app:srcCompat="@drawable/location" />

                <ImageView
                    android:id="@+id/imageCompany"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginStart="15dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageLocation"
                    app:srcCompat="@drawable/building" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabIndicatorColor="@color/black"
            app:tabRippleColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Company"/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabs"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/coordinator4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="100dp"
            android:rotation="180"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/mProgress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginBottom="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/Progress"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/progress_bar" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>